--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>这是一个测试网站</title>
 </head>
 <body>
-    <h1><center>测试html</center></h1>
-    <p>点击下面超链接文本，进入github网页</p>
-    <a href="https://github.com/new" alt="github官网">点击进入GitHub官网</a>
-    <p>不用害怕，没有病毒</p>
-    
-</body>
+    <p>你用沉默敷衍搪塞我的问题 我痛又无言。</p>
+    “被人嘲笑的 才叫做梦想”
+    <p>在生活的长河中，我们每个人都扮演着收藏家的角色，用心地拾起那些散落记忆角落的珍珠，
+        将它们小心翼翼地安置在心房最柔软的位置。这些回忆，或温暖如初阳，照亮前行的道路；
+        或深邃似夜空，引人无限遐想。它们不仅仅是过往的瞬间，更是构成我们个人历史、
+        塑造我们情感世界的宝贵片段。我曾以为，某些记忆，对于你我而言，是同样珍贵且不可磨灭的
+        。那些共同走过的日子，无论是欢笑还是泪水交织的时刻，我都视若珍宝，一一珍藏。每当我翻开记忆的相册，
+        那些画面便如电影般在脑海中缓缓播放，每一个细节都清晰可触，情感依旧鲜明如初。</p>
 </html>
